examples/test/testpolicy4672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4672
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key23: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value10
          key45: value3
          key25: value41
      podSelector:
        matchLabels:
          key32: value12
